--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <nav class="navbar">
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./HTML/resume.html">Resume</a></li>
+                <li><a href="./HTML/portfolio.html">Portfolio</a></li>
+                <li><a href="./HTML/about.html">About</a></li>
+                <li><a href="./HTML/contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
