--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="./CSS/style.css" rel="stylesheet">
+    <link href="../CSS/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Let's Connect</title>
@@ -10,19 +10,22 @@
     <div class="navbar-container">
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li class="active"><a href="contact.html">Contact</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../HTML/resume.html">Resume</a></li>
+                <li><a href="../HTML/portfolio.html">Portfolio</a></li>
+                <li><a href="../HTML/about.html">About</a></li>
+                <li class="active"><a href="../HTML/contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
     <div class="container">
         <div class="left-side">
             <h1>
-                My Contact Info
+                Contact Info
             </h1>
+            <div class="img-container">
+                <img class="img-content" src="../IMG/contact.jpg">
+            </div>
         </div>
         <div class="right-side">
             <div class="contact-box">
