Changed img content to include alt. made some small changes in style. added stuff to my portfolio with links.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -24,12 +24,14 @@
                 About Me
             </h1>
             <div class="img-container">
-                <img class="img-content" src="../IMG/aboutme.jpg">
+                <img class="img-content" src="../IMG/aboutme.jpg" alt="En bild på en gubbe med hatt glasögon och en prydlig mustasch">
             </div>
         </div>
         <div class="right-side">
             <p>
-                I'm a .Net student.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Delectus culpa ullam ipsam laudantium sapiente molestias aut praesentium nobis cum, beatae saepe consequatur quasi!
+                Labore beatae nisi, impedit nemo ab modi assumenda suscipit aliquid, quos temporibus error iure distinctio eveniet! Libero?
                 
             </p>
         </div>
