--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -24,24 +24,28 @@
                 Contact Info
             </h1>
             <div class="img-container">
-                <img class="img-content" src="../IMG/contact.jpg">
+                <img class="img-content" src="../IMG/contact.jpg" alt="En bild på en gammal bordstelefon i steampunk-anda">
             </div>
         </div>
         <div class="right-side">
             <div class="contact-box">
                 <ul>
                     <li>
-                        <a href="mailto:daniel.sidstedt@gmail.com">
-                            <i class="fa-solid fa-envelope"></i> Email</a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/daniel-sidstedt/">
-                                <i class="fa-brands fa-linkedin"></i> LinkedIn</a>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-phone"></i>
-                                +4672 312 34 56
-                            </li>
+                        <a href="mailto:daniel.sidstedt@gmail.com" target="_blank">
+                        <i class="fa-solid fa-envelope"></i> Email</a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/daniel-sidstedt/" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/sidstedt" target="_blank">
+                        <i class="fa-brands fa-square-github"></i> Github</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-phone"></i>
+                        +4672 312 34 56
+                    </li>
                 </ul>
             </div>
         </div>
