--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -24,13 +24,13 @@
                 Portfolio
             </h1>
             <div class="img-container">
-                <img class="img-content" src="../IMG/portfolio.jpg">
+                <img class="img-content" src="../IMG/portfolio.jpg" alt="En öppen bok som ligger bredvid ett fönster">
             </div>
         </div>
         <div class="right-side">
 
             <div class="portfolio-item">
-                <h3>My Bank System</h3>
+                <h3>Rebel Alliance</h3>
                 <div class="button">
                     <a href="#project1">View More</a>
                 </div>
@@ -39,13 +39,14 @@
             <div id="project1" class="modal">
                 <div class="modal-content">
                     <a href="#" class="close">&times;</a>
-                    <h3>My Bank System</h3>
-                    <p>A simple C# bank system using arrays for account handling.</p>
+                    <h3>Rebel Alliance</h3><br>
+                    <p>A Bank system created with classmates for a school project.</p><br>
+                    <a href="https://github.com/Darkdusk234/RebelAllianceBank" target="_blank">Github-link</a>
                 </div>
             </div>
 
             <div class="portfolio-item">
-                <h3>My Bank System</h3>
+                <h3>Daniels Highschool</h3>
                 <div class="button">
                 <a href="#project2">View More</a>
                 </div>
@@ -54,13 +55,14 @@
             <div id="project2" class="modal">
                 <div class="modal-content">
                     <a href="#" class="close">&times;</a>
-                    <h3>My Bank System</h3>
-                    <p>A simple C# bank system using arrays for account handling.</p>
+                    <h3>Highschool</h3><br>
+                    <p>Created a administration console app that handles database requests for a school project.</p><br>
+                    <a href="https://github.com/sidstedt/Daniels_HighSchool_V3" target="_blank">Github-link</a>
                 </div>
             </div>
 
             <div class="portfolio-item">
-                <h3>My Bank System</h3>
+                <h3>Spotify Player API</h3>
                 <div class="button">
                     <a href="#project3">View More</a>
                 </div>
@@ -69,13 +71,15 @@
             <div id="project3" class="modal">
                 <div class="modal-content">
                     <a href="#" class="close">&times;</a>
-                    <h3>My Bank System</h3>
-                    <p>A simple C# bank system using arrays for account handling.</p>
+                    <h3>Spotify</h3><br>
+                    <p>School project where i used Spotifys API to let users log in and store their playlists and songs to MySQL database.
+                        And then users could listen to their songs.</p><br>
+                    <a href="https://github.com/sidstedt/Spotify_API_PHP" target="_blank">Github-link</a>
                 </div>
             </div>
 
             <div class="portfolio-item">
-                <h3>My Bank System</h3>
+                <h3>My Resume</h3>
                 <div class="button">
                     <a href="#project4">View More</a>
                 </div>
@@ -84,11 +88,27 @@
             <div id="project4" class="modal">
                 <div class="modal-content">
                     <a href="#" class="close">&times;</a>
-                    <h3>My Bank System</h3>
-                    <p>A simple C# bank system using arrays for account handling.</p>
+                    <h3>Resume</h3><br>
+                    <p>This is the homepage i created and that you are viewing right now.</p><br>
+                    <a href="https://github.com/sidstedt/Resume_web" target="_blank">Github-link</a>
                 </div>
             </div>
 
+            <div class="portfolio-item">
+                <h3>Guldkortet</h3>
+                <div class="button">
+                    <a href="#project4">View More</a>
+                </div>
+            </div>
+            <!-- Modal (hidden) -->
+            <div id="project4" class="modal">
+                <div class="modal-content">
+                    <a href="#" class="close">&times;</a>
+                    <h3>Resume</h3><br>
+                    <p>School project i created to handle winner cards through a klient and a server.</p><br>
+                    <a href="https://github.com/sidstedt/Resume_web" target="_blank">Github-link</a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
