--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -24,7 +24,7 @@
                 Resume
             </h1>
             <div class="img-container">
-                <img class="img-content" src="../IMG/resume.jpg">
+                <img class="img-content" src="../IMG/resume.jpg" alt="En bild på ett ord som lyder Resume, med kugghjul och tema i steampunk">
             </div>
         </div>
         <div class="right-side">
