--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Daniel Sidstedt
             </h1>
             <div class="img-container">
-                <img class="img-content" src="https://media.licdn.com/dms/image/v2/D4D03AQG746GKVcW-TA/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1728895227324?e=1745452800&v=beta&t=MHVatmKlsncH08PTU9vQQ0j2wYOUPV1faHROjYaOs1k">
+                <img class="img-content" src="./IMG/jag.jpg" alt="Bild på personen som hemsidan handlar om. En man i röd/svart-rutig skjorta med kortklippt frisyr.">
             </div>
         </div>
         <div class="right-side">
