Added json for my resume and added javascript to load the json and also added two easter eggs. Added a print.css for printer friendly layout. Made some changes in the style.css

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link href="../CSS/style.css" rel="stylesheet">
+    <link href="../CSS/print.css" media="print" rel="stylesheet"></link>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
@@ -54,5 +55,6 @@
         </div>
     </div>
     <script src="https://kit.fontawesome.com/925a902ff0.js" crossorigin="anonymous"></script>
+    <script src="../JS/scripts.js"></script>
 </body>
 </html>
