--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link href="../CSS/style.css" rel="stylesheet">
+    <link href="../CSS/print.css" media="print" rel="stylesheet"></link>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
@@ -114,5 +115,6 @@
             </div>
         </div>
     </div>
+    <script src="../JS/scripts.js"></script>
 </body>
 </html>
