--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="../CSS/print.css" media="print" rel="stylesheet"></link>
     <link href="../CSS/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,74 +32,82 @@
             </div>
         </div>
         <div class="right-side">
-            <!-- Education Section -->
-            <h2>Education</h2><br>
+            <h2>Education</h2>
+            <ul id="education-list"></ul>
+
+            <h2>Work Experience</h2>
+            <ul id="experience-list"></ul>
+
+            <h2>Certifications (2025)</h2>
+            <ul id="certifications-list"></ul>
+            
+            <!-- <h2>Education</h2>
             <ul>
                 <li><strong>El – Data</strong>, Lindälvsgymnasiet, Kungsbacka (2005-2007)</li>
                 <li><strong>Komvux</strong>, Göteborg/Borås (2014-2015)</li>
                 <li><strong>VVS-montör</strong>, Movant, Varberg (2022-2023)</li>
-            </ul><br><br>
+            </ul>
 
-            <!-- Work Experience -->
-            <h2>Work Experience</h2><br>
+            <h2>Work Experience</h2>
 
-            <h4>Ironman Demolition, Göteborg (July 2007 - Jan 2010)</h4>
-            <p>Demolition & Sanitation</p><br>
+            <h3>Ironman Demolition, Göteborg (July 2007 - Jan 2010)</h3>
+            <h4>Demolition & Sanitation</h4>
             <ul>
                 <li>Performed various types of demolition work.</li>
                 <li>Asbestos removal and safe handling.</li>
                 <li>Learned about construction structures and machinery.</li>
                 <li>Worked as a team leader and coordinator.</li>
-            </ul><br>
+            </ul>
 
-            <h4>JMK Service & Sanering, Göteborg (Feb 2010 - Feb 2018)</h4>
-            <p>Sanitize & Sealant Applicator</p><br>
+            <h3>JMK Service & Sanering, Göteborg (Feb 2010 - Feb 2018)</h3>
+            <h4>Sanitize & Sealant Applicator</h4>
             <ul>
                 <li>Worked on PCB sanitation and re-sealing of building elements.</li>
                 <li>Minor concrete repairs.</li>
-            </ul><br>
+            </ul>
 
-            <h4>Vallda Riv & Håltagning (Feb 2018 - Aug 2022)</h4>
-            <p>Concrete Cutting & Drilling</p><br>
+            <h3>Vallda Riv & Håltagning (Feb 2018 - Aug 2022)</h3>
+            <h4>Concrete Cutting & Drilling</h4>
             <ul>
                 <li>Learned core drilling, wall sawing, and floor sawing.</li>
                 <li>Worked in customer service and project coordination.</li>
                 <li>Assisted with job estimation and scheduling.</li>
-            </ul><br>
+            </ul>
 
-            <h4>Varbergs Kommun - Idrottsplatsskötare, Ishall (Aug 2023 - Aug 2024)</h4><br>
+            <h3>Varbergs Kommun - Idrottsplatsskötare, Ishall (Aug 2023 - Aug 2024)</h3>
+            <h4>Ice Resurfacer</h4>
             <ul>
                 <li>Operated ice machines and maintained facilities.</li>
                 <li>Handled incident reports, cashier tasks, and general maintenance.</li>
-            </ul><br>
+            </ul>
 
-            <h4>Varbergs Kommun (May 2024 - June 2024)</h4>
-            <p>Electoral Official</p><br>
+            <h3>Varbergs Kommun (May 2024 - June 2024)</h3>
+            <h4>Electoral Official</h4>
             <ul>
                 <li>Worked as a voting receiver during early voting and on the election day.</li>
                 <li>Managed various election-related tasks.</li>
-            </ul><br>
+            </ul>
 
-            <h4>Campus Varberg (Aug 2024 - Present)</h4>
-            <p>.Net System Development Student</p><br>
+            <h3>Campus Varberg (Aug 2024 - Present)</h3>
+            <h4>.Net System Development Student</h4>
             <ul>
                 <li>Learning object-oriented programming with C#</li>
                 <li>Developing web applications with ASP.NET</li>
                 <li>Working with databases and administration</li>
                 <li>Gaining experience in agile system development</li>
                 <li>Completing internships (LIA) in real-world projects</li>
-            </ul><br><br>
+            </ul>
 
-            <!-- Certifications -->
-            <h3>Certifications (2025)</h3>
+            <h2>Certifications (2025)</h2>
             <ul>
                 <li>Hot Work Certification</li>
                 <li>Mobile Platforms Certification</li>
                 <li>Personal Fall Protection</li>
                 <li>Silica Dust Safety</li>
                 <li>Secure Water Handling</li>
-            </ul>
+            </ul> -->
         </div>
     </div>
+    <script src="../JS/scripts.js"></script>
 </body>
 </html>
