--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="./CSS/print.css" media="print" rel="stylesheet"></link>
     <link href="./CSS/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,5 +43,6 @@
             </p>
         </div>
     </div>
+    <script src="../JS/scripts.js"></script>
 </body>
 </html>
