--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -33,13 +33,12 @@
         </div>
         <div class="right-side">
 
-            <div class="portfolio-item">
+            <!-- <div class="portfolio-item">
                 <h3>Rebel Alliance</h3>
                 <div class="button">
                     <a href="#project1">View More</a>
                 </div>
             </div>
-            <!-- Modal (hidden) -->
             <div id="project1" class="modal">
                 <div class="modal-content">
                     <a href="#" class="close">&times;</a>
@@ -55,7 +54,6 @@
                 <a href="#project2">View More</a>
                 </div>
             </div>
-            <!-- Modal (hidden) -->
             <div id="project2" class="modal">
                 <div class="modal-content">
                     <a href="#" class="close">&times;</a>
@@ -71,7 +69,6 @@
                     <a href="#project3">View More</a>
                 </div>
             </div>
-            <!-- Modal (hidden) -->
             <div id="project3" class="modal">
                 <div class="modal-content">
                     <a href="#" class="close">&times;</a>
@@ -88,7 +85,6 @@
                     <a href="#project4">View More</a>
                 </div>
             </div>
-            <!-- Modal (hidden) -->
             <div id="project4" class="modal">
                 <div class="modal-content">
                     <a href="#" class="close">&times;</a>
@@ -104,7 +100,6 @@
                     <a href="#project4">View More</a>
                 </div>
             </div>
-            <!-- Modal (hidden) -->
             <div id="project4" class="modal">
                 <div class="modal-content">
                     <a href="#" class="close">&times;</a>
@@ -113,8 +108,9 @@
                     <a href="https://github.com/sidstedt/Resume_web" target="_blank">Github-link</a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <script src="../JS/scripts.js"></script>
+    <script src="/JS/api.js"></script>
 </body>
 </html>
