Added semantic structure to the .html-files. Changed place of the easter egg. Added a loader to porftfolio. Removed old commented code. separated easteregg script to own file.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../CSS/style.css" rel="stylesheet">
-    <link href="../CSS/print.css" media="print" rel="stylesheet"></link>
+    <link href="/CSS/style.css" rel="stylesheet">
+    <link href="/CSS/print.css" media="print" rel="stylesheet"></link>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
@@ -11,35 +11,35 @@
     <title>About | Who I Am</title>
 </head>
 <body>
-    <div class="navbar-container">
+    <header>
         <nav class="navbar">
             <ul>
-                <li><a href="..index.html">Home</a></li>
-                <li><a href="../HTML/resume.html">Resume</a></li>
-                <li><a href="../HTML/portfolio.html">Portfolio</a></li>
-                <li class="active"><a href="../HTML/about.html">About</a></li>
-                <li><a href="../HTML/contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="/HTML/resume.html">Resume</a></li>
+                <li><a href="/HTML/portfolio.html">Portfolio</a></li>
+                <li class="active"><a href="/HTML/about.html">About</a></li>
+                <li><a href="/HTML/contact.html">Contact</a></li>
             </ul>
         </nav>
-    </div>
-    <div class="container">
-        <div class="left-side">
+    </header>
+    <main class="container">
+        <section class="left-side">
             <h1>
                 About Me
             </h1>
             <div class="img-container">
-                <img class="img-content" src="../IMG/aboutme.jpg" alt="En bild på en gubbe med hatt glasögon och en prydlig mustasch">
+                <img class="img-content" src="/IMG/aboutme.jpg" alt="En bild på en gubbe med hatt glasögon och en prydlig mustasch">
             </div>
-        </div>
-        <div class="right-side">
+        </section>
+        <section class="right-side">
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Delectus culpa ullam ipsam laudantium sapiente molestias aut praesentium nobis cum, beatae saepe consequatur quasi!
-                Labore beatae nisi, impedit nemo ab modi assumenda suscipit aliquid, quos temporibus error iure distinctio eveniet! Libero?
-                
+                Labore beatae nisi, impedit nemo ab modi assumenda suscipit aliquid, quos temporibus error iure distinctio eveniet! Libero?      
             </p>
-        </div>
-    </div>
-    <script src="../JS/scripts.js"></script>
+        </section>
+    </main>
+    <script src="/JS/scripts.js"></script>
+    <script src="/JS/easteregg.js"></script>
 </body>
 </html>
