--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../CSS/style.css" rel="stylesheet">
-    <link href="../CSS/print.css" media="print" rel="stylesheet"></link>
+    <link href="/CSS/style.css" rel="stylesheet">
+    <link href="/CSS/print.css" media="print" rel="stylesheet"></link>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
@@ -11,27 +11,27 @@
     <title>Contact | Let's Connect</title>
 </head>
 <body>
-    <div class="navbar-container">
+    <header>
         <nav class="navbar">
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../HTML/resume.html">Resume</a></li>
-                <li><a href="../HTML/portfolio.html">Portfolio</a></li>
-                <li><a href="../HTML/about.html">About</a></li>
-                <li class="active"><a href="../HTML/contact.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/HTML/resume.html">Resume</a></li>
+                <li><a href="/HTML/portfolio.html">Portfolio</a></li>
+                <li><a href="/HTML/about.html">About</a></li>
+                <li class="active"><a href="/HTML/contact.html">Contact</a></li>
             </ul>
         </nav>
-    </div>
-    <div class="container">
-        <div class="left-side">
+    </header>
+    <main class="container">
+        <section class="left-side">
             <h1>
                 Contact Info
             </h1>
             <div class="img-container">
-                <img class="img-content" src="../IMG/contact.jpg" alt="En bild på en gammal bordstelefon i steampunk-anda">
+                <img class="img-content" src="/IMG/contact.jpg" alt="En bild på en gammal bordstelefon i steampunk-anda">
             </div>
-        </div>
-        <div class="right-side">
+        </section>
+        <section class="right-side">
             <div class="contact-box">
                 <ul>
                     <li>
@@ -52,9 +52,10 @@
                     </li>
                 </ul>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
     <script src="https://kit.fontawesome.com/925a902ff0.js" crossorigin="anonymous"></script>
-    <script src="../JS/scripts.js"></script>
+    <script src="/JS/scripts.js"></script>
+    <script src="/JS/easteregg.js"></script>
 </body>
 </html>
