--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="./CSS/print.css" media="print" rel="stylesheet"></link>
-    <link href="./CSS/style.css" rel="stylesheet">
+    <link href="/CSS/print.css" media="print" rel="stylesheet"></link>
+    <link href="/CSS/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Daniel Sidstedt - Software Developer</title>
@@ -11,19 +11,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar-container">
+    <header>
         <nav class="navbar">
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="./HTML/resume.html">Resume</a></li>
-                <li><a href="./HTML/portfolio.html">Portfolio</a></li>
-                <li><a href="./HTML/about.html">About</a></li>
-                <li><a href="./HTML/contact.html">Contact</a></li>
+                <li><a href="/HTML/resume.html">Resume</a></li>
+                <li><a href="/HTML/portfolio.html">Portfolio</a></li>
+                <li><a href="/HTML/about.html">About</a></li>
+                <li><a href="/HTML/contact.html">Contact</a></li>
             </ul>
         </nav>
-    </div>
-    <div class="container">
-        <div class="left-side">
+    </header>
+    <main class="container">
+        <section class="left-side">
             <h1>
                 I'm <br> 
                 Daniel Sidstedt
@@ -31,18 +31,16 @@
             <div class="img-container">
                 <img class="img-content" src="./IMG/jag.jpg" alt="Bild på personen som hemsidan handlar om. En man i röd/svart-rutig skjorta med kortklippt frisyr.">
             </div>
-        </div>
-        <div class="right-side">
+        </section>
+        <section class="right-side">
             <h3>I'm a .Net student.</h3>
             <p>
-                <br>
                 This is my homepage, created for the sole purpose of a school project.
                 This site will function as my resume.
-                <br><br>
-                
             </p>
-        </div>
-    </div>
-    <script src="../JS/scripts.js"></script>
+        </section>
+    </main>
+    <script src="/JS/scripts.js"></script>
+    <script src="/JS/easteregg.js"></script>
 </body>
 </html>
