--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../CSS/style.css" rel="stylesheet">
-    <link href="../CSS/print.css" media="print" rel="stylesheet"></link>
+    <link href="/CSS/style.css" rel="stylesheet">
+    <link href="/CSS/print.css" media="print" rel="stylesheet"></link>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
@@ -11,106 +11,32 @@
     <title>Portfolio | My Work & Projects</title>
 </head>
 <body>
-    <div class="navbar-container">
+    <header>
         <nav class="navbar">
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../HTML/resume.html">Resume</a></li>
-                <li class="active"><a href="../HTML/portfolio.html">Portfolio</a></li>
-                <li><a href="../HTML/about.html">About</a></li>
-                <li><a href="../HTML/contact.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/HTML/resume.html">Resume</a></li>
+                <li class="active"><a href="/HTML/portfolio.html">Portfolio</a></li>
+                <li><a href="/HTML/about.html">About</a></li>
+                <li><a href="/HTML/contact.html">Contact</a></li>
             </ul>
         </nav>
-    </div>
-    <div class="container">
-        <div class="left-side">
+    </header>
+    <main class="container">
+        <section class="left-side">
             <h1>
                 Portfolio
             </h1>
             <div class="img-container">
-                <img class="img-content" src="../IMG/portfolio.jpg" alt="En öppen bok som ligger bredvid ett fönster">
+                <img class="img-content" src="/IMG/portfolio.jpg" alt="En öppen bok som ligger bredvid ett fönster">
             </div>
-        </div>
-        <div class="right-side">
-
-            <!-- <div class="portfolio-item">
-                <h3>Rebel Alliance</h3>
-                <div class="button">
-                    <a href="#project1">View More</a>
-                </div>
-            </div>
-            <div id="project1" class="modal">
-                <div class="modal-content">
-                    <a href="#" class="close">&times;</a>
-                    <h3>Rebel Alliance</h3><br>
-                    <p>A Bank system created with classmates for a school project.</p><br>
-                    <a href="https://github.com/Darkdusk234/RebelAllianceBank" target="_blank">Github-link</a>
-                </div>
-            </div>
-
-            <div class="portfolio-item">
-                <h3>Daniels Highschool</h3>
-                <div class="button">
-                <a href="#project2">View More</a>
-                </div>
-            </div>
-            <div id="project2" class="modal">
-                <div class="modal-content">
-                    <a href="#" class="close">&times;</a>
-                    <h3>Highschool</h3><br>
-                    <p>Created a administration console app that handles database requests for a school project.</p><br>
-                    <a href="https://github.com/sidstedt/Daniels_HighSchool_V3" target="_blank">Github-link</a>
-                </div>
-            </div>
-
-            <div class="portfolio-item">
-                <h3>Spotify Player API</h3>
-                <div class="button">
-                    <a href="#project3">View More</a>
-                </div>
-            </div>
-            <div id="project3" class="modal">
-                <div class="modal-content">
-                    <a href="#" class="close">&times;</a>
-                    <h3>Spotify</h3><br>
-                    <p>School project where i used Spotifys API to let users log in and store their playlists and songs to MySQL database.
-                        And then users could listen to their songs.</p><br>
-                    <a href="https://github.com/sidstedt/Spotify_API_PHP" target="_blank">Github-link</a>
-                </div>
-            </div>
-
-            <div class="portfolio-item">
-                <h3>My Resume</h3>
-                <div class="button">
-                    <a href="#project4">View More</a>
-                </div>
-            </div>
-            <div id="project4" class="modal">
-                <div class="modal-content">
-                    <a href="#" class="close">&times;</a>
-                    <h3>Resume</h3><br>
-                    <p>This is the homepage i created and that you are viewing right now.</p><br>
-                    <a href="https://github.com/sidstedt/Resume_web" target="_blank">Github-link</a>
-                </div>
-            </div>
-
-            <div class="portfolio-item">
-                <h3>Guldkortet</h3>
-                <div class="button">
-                    <a href="#project4">View More</a>
-                </div>
-            </div>
-            <div id="project4" class="modal">
-                <div class="modal-content">
-                    <a href="#" class="close">&times;</a>
-                    <h3>Resume</h3><br>
-                    <p>School project i created to handle winner cards through a klient and a server.</p><br>
-                    <a href="https://github.com/sidstedt/Resume_web" target="_blank">Github-link</a>
-                </div>
-            </div>
-        </div> -->
-    </div>
-    <script src="../JS/scripts.js"></script>
+        </section>
+        <section class="right-side">
+            <!-- Dynamically imported portfolio from github -->
+        </section>
+    </main>
+    <script src="/JS/scripts.js"></script>
     <script src="/JS/api.js"></script>
+    <script src="/JS/easteregg.js"></script>
 </body>
 </html>
