--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../CSS/print.css" media="print" rel="stylesheet"></link>
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="/CSS/print.css" media="print" rel="stylesheet"></link>
+    <link href="/CSS/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
@@ -11,27 +11,25 @@
     <title>Resume | Career & Skills</title>
 </head>
 <body>
-    <div class="navbar-container">
+    <header>
         <nav class="navbar">
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li class="active"><a href="../HTML/resume.html">Resume</a></li>
-                <li><a href="../HTML/portfolio.html">Portfolio</a></li>
-                <li><a href="../HTML/about.html">About</a></li>
-                <li><a href="../HTML/contact.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li class="active"><a href="/HTML/resume.html">Resume</a></li>
+                <li><a href="/HTML/portfolio.html">Portfolio</a></li>
+                <li><a href="/HTML/about.html">About</a></li>
+                <li><a href="/HTML/contact.html">Contact</a></li>
             </ul>
         </nav>
-    </div>
-    <div class="container">
-        <div class="left-side">
-            <h1>
-                Resume
-            </h1>
+    </header>
+    <main class="container">
+        <section class="left-side">
+            <h1>Resume</h1>
             <div class="img-container">
-                <img class="img-content" src="../IMG/resume.jpg" alt="En bild på ett ord som lyder Resume, med kugghjul och tema i steampunk">
+                <img class="img-content" src="/IMG/resume.jpg" alt="En bild på ett ord som lyder Resume, med kugghjul och tema i steampunk">
             </div>
-        </div>
-        <div class="right-side">
+        </section>
+        <section class="right-side">
             <h2>Education</h2>
             <ul id="education-list"></ul>
 
@@ -41,73 +39,9 @@
             <h2>Certifications (2025)</h2>
             <ul id="certifications-list"></ul>
             
-            <!-- <h2>Education</h2>
-            <ul>
-                <li><strong>El – Data</strong>, Lindälvsgymnasiet, Kungsbacka (2005-2007)</li>
-                <li><strong>Komvux</strong>, Göteborg/Borås (2014-2015)</li>
-                <li><strong>VVS-montör</strong>, Movant, Varberg (2022-2023)</li>
-            </ul>
-
-            <h2>Work Experience</h2>
-
-            <h3>Ironman Demolition, Göteborg (July 2007 - Jan 2010)</h3>
-            <h4>Demolition & Sanitation</h4>
-            <ul>
-                <li>Performed various types of demolition work.</li>
-                <li>Asbestos removal and safe handling.</li>
-                <li>Learned about construction structures and machinery.</li>
-                <li>Worked as a team leader and coordinator.</li>
-            </ul>
-
-            <h3>JMK Service & Sanering, Göteborg (Feb 2010 - Feb 2018)</h3>
-            <h4>Sanitize & Sealant Applicator</h4>
-            <ul>
-                <li>Worked on PCB sanitation and re-sealing of building elements.</li>
-                <li>Minor concrete repairs.</li>
-            </ul>
-
-            <h3>Vallda Riv & Håltagning (Feb 2018 - Aug 2022)</h3>
-            <h4>Concrete Cutting & Drilling</h4>
-            <ul>
-                <li>Learned core drilling, wall sawing, and floor sawing.</li>
-                <li>Worked in customer service and project coordination.</li>
-                <li>Assisted with job estimation and scheduling.</li>
-            </ul>
-
-            <h3>Varbergs Kommun - Idrottsplatsskötare, Ishall (Aug 2023 - Aug 2024)</h3>
-            <h4>Ice Resurfacer</h4>
-            <ul>
-                <li>Operated ice machines and maintained facilities.</li>
-                <li>Handled incident reports, cashier tasks, and general maintenance.</li>
-            </ul>
-
-            <h3>Varbergs Kommun (May 2024 - June 2024)</h3>
-            <h4>Electoral Official</h4>
-            <ul>
-                <li>Worked as a voting receiver during early voting and on the election day.</li>
-                <li>Managed various election-related tasks.</li>
-            </ul>
-
-            <h3>Campus Varberg (Aug 2024 - Present)</h3>
-            <h4>.Net System Development Student</h4>
-            <ul>
-                <li>Learning object-oriented programming with C#</li>
-                <li>Developing web applications with ASP.NET</li>
-                <li>Working with databases and administration</li>
-                <li>Gaining experience in agile system development</li>
-                <li>Completing internships (LIA) in real-world projects</li>
-            </ul>
-
-            <h2>Certifications (2025)</h2>
-            <ul>
-                <li>Hot Work Certification</li>
-                <li>Mobile Platforms Certification</li>
-                <li>Personal Fall Protection</li>
-                <li>Silica Dust Safety</li>
-                <li>Secure Water Handling</li>
-            </ul> -->
-        </div>
-    </div>
-    <script src="../JS/scripts.js"></script>
+        </section>
+    </main>
+    <script src="/JS/scripts.js"></script>
+    <script src="/JS/easteregg.js"></script>
 </body>
 </html>
