Update resume and portfolio pages with alternating backgrounds and gradient effects - Apply alternating background colors to education and experience sections. - Add gradient backgrounds for visual enhancement. - Improve semantic HTML structure and accessibility. - Update content and styling in HTML and CSS files. - Enhance print styles for better print layout.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/HTML/resume.html">Resume</a></li>
                 <li><a href="/HTML/portfolio.html">Portfolio</a></li>
                 <li class="active"><a href="/HTML/about.html">About</a></li>
@@ -28,7 +28,7 @@
                 About Me
             </h1>
             <div class="img-container">
-                <img class="img-content" src="/IMG/aboutme.jpg" alt="En bild på en gubbe med hatt glasögon och en prydlig mustasch">
+                <img class="img-content" src="/IMG/aboutme.jpg" alt="A picture resembles a man with mustasch, glasses and a hat">
             </div>
         </section>
         <section class="right-side">
