--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -28,7 +28,7 @@
                 Portfolio
             </h1>
             <div class="img-container">
-                <img class="img-content" src="/IMG/portfolio.jpg" alt="En öppen bok som ligger bredvid ett fönster">
+                <img class="img-content" src="/IMG/portfolio.jpg" alt="An open book with a pencil on a table next to a window">
             </div>
         </section>
         <section class="right-side">
