--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -26,7 +26,7 @@
         <section class="left-side">
             <h1>Resume</h1>
             <div class="img-container">
-                <img class="img-content" src="/IMG/resume.jpg" alt="En bild på ett ord som lyder Resume, med kugghjul och tema i steampunk">
+                <img class="img-content" src="/IMG/resume.jpg" alt="Steampunkinspired image with coghweels with the word resume in the middle">
             </div>
         </section>
         <section class="right-side">
@@ -36,7 +36,7 @@
             <h2>Work Experience</h2>
             <ul id="experience-list"></ul>
 
-            <h2>Certifications (2025)</h2>
+            <h2>Certifications</h2>
             <ul id="certifications-list"></ul>
             
         </section>
