--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
     </header>
     <main class="container">
         <section class="left-side">
-            <h1>
-                I'm <br> 
-                Daniel Sidstedt
-            </h1>
+            <h1>Welcome</h1>
             <div class="img-container">
-                <img class="img-content" src="./IMG/jag.jpg" alt="Bild på personen som hemsidan handlar om. En man i röd/svart-rutig skjorta med kortklippt frisyr.">
+                <img class="img-content" src="./IMG/jag.jpg" alt="A selfshot of me in a red/black shirt">
             </div>
         </section>
         <section class="right-side">
-            <h3>I'm a .Net student.</h3>
+            <article>
+                <h2>Who am I?</h2>
+                <h3>I'm Daniel Sidstedt</h3>
+                <p>
+                    I'm a student at Campus Varberg, studying .NET. I'm a software developer with a passion for coding.
+                    I'm a quick learner and I'm always eager to learn new things.
+                </p>
             <p>
-                This is my homepage, created for the sole purpose of a school project.
+                And this is my homepage, created for the sole purpose of a school project.
                 This site will function as my resume.
             </p>
         </section>
