--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -28,26 +28,26 @@
                 Contact Info
             </h1>
             <div class="img-container">
-                <img class="img-content" src="/IMG/contact.jpg" alt="En bild på en gammal bordstelefon i steampunk-anda">
+                <img class="img-content" src="/IMG/contact.jpg" alt="Steampunkinspired image of an old telephone">
             </div>
         </section>
         <section class="right-side">
             <div class="contact-box">
                 <ul>
                     <li>
-                        <a href="mailto:daniel.sidstedt@gmail.com" target="_blank">
+                        <a href="mailto:daniel.sidstedt@gmail.com" target="_blank" alt="email link">
                         <i class="fa-solid fa-envelope"></i> Email</a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/daniel-sidstedt/" target="_blank">
+                        <a href="https://www.linkedin.com/in/daniel-sidstedt/" target="_blank" alt="linkedin link">
                         <i class="fa-brands fa-linkedin"></i> LinkedIn</a>
                     </li>
                     <li>
-                        <a href="https://github.com/sidstedt" target="_blank">
+                        <a href="https://github.com/sidstedt" target="_blank" alt="github link">
                         <i class="fa-brands fa-square-github"></i> Github</a>
                     </li>
                     <li>
-                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-solid fa-phone" alt="phone-number"></i>
                         +4672 312 34 56
                     </li>
                 </ul>
