feat: Improve accessibility and focus styles
- Add skip links for better navigation.
- Ensure all important elements are tabbable.
- Enhance focus styles with borders and shadows.
- Add aria-labels for better screen reader support.
- Update HTML structure for better accessibility.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -11,6 +11,7 @@
     <title>About | Who I Am</title>
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <nav class="navbar">
             <ul>
@@ -31,7 +32,7 @@
                 <img class="img-content" src="/IMG/aboutme.jpg" alt="A picture resembles a man with mustasch, glasses and a hat">
             </div>
         </section>
-        <section class="right-side">
+        <section class="right-side" id="main-content">
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Delectus culpa ullam ipsam laudantium sapiente molestias aut praesentium nobis cum, beatae saepe consequatur quasi!
