--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -11,6 +11,7 @@
     <title>Contact | Let's Connect</title>
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <nav class="navbar">
             <ul>
@@ -31,23 +32,23 @@
                 <img class="img-content" src="/IMG/contact.jpg" alt="Steampunkinspired image of an old telephone">
             </div>
         </section>
-        <section class="right-side">
+        <section class="right-side" id="main-content">
             <div class="contact-box">
                 <ul>
                     <li>
-                        <a href="mailto:daniel.sidstedt@gmail.com" target="_blank" alt="email link">
+                        <a href="mailto:daniel.sidstedt@gmail.com" target="_blank">
                         <i class="fa-solid fa-envelope"></i> Email</a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/daniel-sidstedt/" target="_blank" alt="linkedin link">
+                        <a href="https://www.linkedin.com/in/daniel-sidstedt/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i> LinkedIn</a>
                     </li>
                     <li>
-                        <a href="https://github.com/sidstedt" target="_blank" alt="github link">
+                        <a href="https://github.com/sidstedt" target="_blank">
                         <i class="fa-brands fa-square-github"></i> Github</a>
                     </li>
                     <li>
-                        <i class="fa-solid fa-phone" alt="phone-number"></i>
+                        <i class="fa-solid fa-phone" aria-label="phone-number"></i>
                         +4672 312 34 56
                     </li>
                 </ul>
