--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -11,6 +11,7 @@
     <title>Portfolio | My Work & Projects</title>
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <nav class="navbar">
             <ul>
@@ -31,7 +32,7 @@
                 <img class="img-content" src="/IMG/portfolio.jpg" alt="An open book with a pencil on a table next to a window">
             </div>
         </section>
-        <section class="right-side">
+        <section class="right-side" id="main-content">
             <!-- Dynamically imported portfolio from github -->
         </section>
     </main>
