--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -11,6 +11,7 @@
     <title>Resume | Career & Skills</title>
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <nav class="navbar">
             <ul>
@@ -29,14 +30,12 @@
                 <img class="img-content" src="/IMG/resume.jpg" alt="Steampunkinspired image with coghweels with the word resume in the middle">
             </div>
         </section>
-        <section class="right-side">
-            <h2>Education</h2>
+        <section class="right-side" id="main-content">
+
             <ul id="education-list"></ul>
 
-            <h2>Work Experience</h2>
             <ul id="experience-list"></ul>
 
-            <h2>Certifications</h2>
             <ul id="certifications-list"></ul>
             
         </section>
