--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="/CSS/print.css" media="print" rel="stylesheet"></link>
+    <link href="/CSS/print.css" media="print" rel="stylesheet">
     <link href="/CSS/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <nav class="navbar">
             <ul>
@@ -29,7 +30,7 @@
                 <img class="img-content" src="./IMG/jag.jpg" alt="A selfshot of me in a red/black shirt">
             </div>
         </section>
-        <section class="right-side">
+        <section class="right-side" id="main-content">
             <article>
                 <h2>Who am I?</h2>
                 <h3>I'm Daniel Sidstedt</h3>
@@ -41,6 +42,7 @@
                 And this is my homepage, created for the sole purpose of a school project.
                 This site will function as my resume.
             </p>
+            </article>
         </section>
     </main>
     <script src="/JS/scripts.js"></script>
