--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="/CSS/print.css" media="print" rel="stylesheet"></link>
+    <link href="/CSS/print.css" media="print" rel="stylesheet">
     <link href="/CSS/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
