Ran my code through html and css validators. Fixed all errors and warnings. Following are the changes made: Replace <section> with <aside> for better semantics and accessibility. - Updated HTML files to use <aside> for sidebar content.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -24,21 +24,24 @@
         </nav>
     </header>
     <main class="container">
-        <section class="left-side">
+        <aside class="left-side">
             <h1>
                 About Me
             </h1>
             <div class="img-container">
                 <img class="img-content" src="/IMG/aboutme.jpg" alt="A picture resembles a man with mustasch, glasses and a hat">
             </div>
-        </section>
-        <section class="right-side" id="main-content">
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Delectus culpa ullam ipsam laudantium sapiente molestias aut praesentium nobis cum, beatae saepe consequatur quasi!
-                Labore beatae nisi, impedit nemo ab modi assumenda suscipit aliquid, quos temporibus error iure distinctio eveniet! Libero?      
-            </p>
-        </section>
+        </aside>
+        <div class="right-side" id="main-content">
+            <article>
+                <h2>A little bit of lorem ipsum</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Delectus culpa ullam ipsam laudantium sapiente molestias aut praesentium nobis cum, beatae saepe consequatur quasi!
+                    Labore beatae nisi, impedit nemo ab modi assumenda suscipit aliquid, quos temporibus error iure distinctio eveniet! Libero?      
+                </p>
+            </article>
+        </div>
     </main>
     <script src="/JS/scripts.js"></script>
     <script src="/JS/easteregg.js"></script>
