--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -24,15 +24,16 @@
         </nav>
     </header>
     <main class="container">
-        <section class="left-side">
+        <aside class="left-side">
             <h1>
                 Contact Info
             </h1>
             <div class="img-container">
                 <img class="img-content" src="/IMG/contact.jpg" alt="Steampunkinspired image of an old telephone">
             </div>
-        </section>
+        </aside>
         <section class="right-side" id="main-content">
+            <h2>Let's Connect</h2>
             <div class="contact-box">
                 <ul>
                     <li>
@@ -48,8 +49,8 @@
                         <i class="fa-brands fa-square-github"></i> Github</a>
                     </li>
                     <li>
-                        <i class="fa-solid fa-phone" aria-label="phone-number"></i>
-                        +4672 312 34 56
+                        <i class="fa-solid fa-phone"></i>
+                        +46 737 41 13 11
                     </li>
                 </ul>
             </div>
