--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -24,21 +24,17 @@
         </nav>
     </header>
     <main class="container">
-        <section class="left-side">
+        <aside class="left-side">
             <h1>Resume</h1>
             <div class="img-container">
                 <img class="img-content" src="/IMG/resume.jpg" alt="Steampunkinspired image with coghweels with the word resume in the middle">
             </div>
-        </section>
-        <section class="right-side" id="main-content">
-
-            <ul id="education-list"></ul>
-
-            <ul id="experience-list"></ul>
-
-            <ul id="certifications-list"></ul>
-            
-        </section>
+        </aside>
+        <div class="right-side" id="main-content">
+                <ul id="education-list"></ul>
+                <ul id="experience-list"></ul>
+                <ul id="certifications-list"></ul>            
+        </div>
     </main>
     <script src="/JS/scripts.js"></script>
     <script src="/JS/easteregg.js"></script>
