--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -24,17 +24,17 @@
         </nav>
     </header>
     <main class="container">
-        <section class="left-side">
+        <aside class="left-side">
             <h1>
                 Portfolio
             </h1>
             <div class="img-container">
                 <img class="img-content" src="/IMG/portfolio.jpg" alt="An open book with a pencil on a table next to a window">
             </div>
-        </section>
-        <section class="right-side" id="main-content">
+        </aside>
+        <div class="right-side" id="main-content">
             <!-- Dynamically imported portfolio from github -->
-        </section>
+        </div>
     </main>
     <script src="/JS/scripts.js"></script>
     <script src="/JS/api.js"></script>
