--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </nav>
     </header>
     <main class="container">
-        <section class="left-side">
+        <aside class="left-side">
             <h1>Welcome</h1>
             <div class="img-container">
                 <img class="img-content" src="./IMG/jag.jpg" alt="A selfshot of me in a red/black shirt">
             </div>
-        </section>
-        <section class="right-side" id="main-content">
+        </aside>
+        <div class="right-side" id="main-content">
             <article>
                 <h2>Who am I?</h2>
                 <h3>I'm Daniel Sidstedt</h3>
@@ -43,7 +43,7 @@
                 This site will function as my resume.
             </p>
             </article>
-        </section>
+        </div>
     </main>
     <script src="/JS/scripts.js"></script>
     <script src="/JS/easteregg.js"></script>
